--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -22,160 +22,163 @@
 </head>
 
 <body>
-
+   
     <div class="container">
 
-        <h2>Survey Questions</h2>
-        <hr>
+         <!-- questions field -->
+        <div>
+            <h2>Survey Questions</h2>
+            <hr>
 
-        <h3>
-            <strong>About You</strong>
-        </h3>
-        <h4>Name (Required)</h4>
-        <input type="text" name="" id="name" class="form-control" required>
+            <h3>
+                <strong>About You</strong>
+            </h3>
+            <h4>Name (Required)</h4>
+            <input type="text" name="" id="name" class="form-control" required>
 
-        <h4>Link to Photo Image (Required)</h4>
-        <input type="text" name="" id="photo" class="form-control" required>
+            <h4>Link to Photo Image (Required)</h4>
+            <input type="text" name="" id="photo" class="form-control" required>
 
-        <hr>
+            <hr>
 
-        <h3>
-            <strong>Question 1</strong>
-        </h3>
-        <h4>You like chocoloate.</h4>
-        <select data-placeholder="" class="chosen-select" id="q1">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
+            <h3>
+                <strong>Question 1</strong>
+            </h3>
+            <h4>You like chocoloate.</h4>
+            <select data-placeholder="" class="chosen-select" id="Q1">
+                <option value=""></option>
+                <option value="1">1 (Strongly Disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 (Strongly Agree)</option>
+            </select>
 
-        <h3>
-            <strong>Question 2</strong>
-        </h3>
-        <h4>You enjoy learning new things.</h4>
-        <select data-placeholder="" class="chosen-select" id="q2">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-
-
-        <h3>
-            <strong>Question 3</strong>
-        </h3>
-        <h4>You would rather be outside than inside.</h4>
-        <select data-placeholder="" class="chosen-select" id="q3">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
+            <h3>
+                <strong>Question 2</strong>
+            </h3>
+            <h4>You enjoy learning new things.</h4>
+            <select data-placeholder="" class="chosen-select" id="Q2">
+                <option value=""></option>
+                <option value="1">1 (Strongly Disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 (Strongly Agree)</option>
+            </select>
 
 
-        <h3>
-            <strong>Question 4</strong>
-        </h3>
-        <h4>You would rather play videogames than watch tv.</h4>
-        <select data-placeholder="" class="chosen-select" id="q4">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
+            <h3>
+                <strong>Question 3</strong>
+            </h3>
+            <h4>You would rather be outside than inside.</h4>
+            <select data-placeholder="" class="chosen-select" id="Q3">
+                <option value=""></option>
+                <option value="1">1 (Strongly Disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 (Strongly Agree)</option>
+            </select>
 
 
-        <h3>
-            <strong>Question 5</strong>
-        </h3>
-        <h4>A hotdog is a sandwhich.</h4>
-        <select data-placeholder="" class="chosen-select" id="q5">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
+            <h3>
+                <strong>Question 4</strong>
+            </h3>
+            <h4>You would rather play videogames than watch tv.</h4>
+            <select data-placeholder="" class="chosen-select" id="Q4">
+                <option value=""></option>
+                <option value="1">1 (Strongly Disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 (Strongly Agree)</option>
+            </select>
 
 
-        <h3>
-            <strong>Question 6</strong>
-        </h3>
-        <h4>water is wet.</h4>
-        <select data-placeholder="" class="chosen-select" id="q6">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
+            <h3>
+                <strong>Question 5</strong>
+            </h3>
+            <h4>A hotdog is a sandwhich.</h4>
+            <select data-placeholder="" class="chosen-select" id="Q5">
+                <option value=""></option>
+                <option value="1">1 (Strongly Disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 (Strongly Agree)</option>
+            </select>
 
 
-        <h3>
-            <strong>Question 7</strong>
-        </h3>
-        <h4>The earth is flat.</h4>
-        <select data-placeholder="" class="chosen-select" id="q7">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
+            <h3>
+                <strong>Question 6</strong>
+            </h3>
+            <h4>water is wet.</h4>
+            <select data-placeholder="" class="chosen-select" id="Q6">
+                <option value=""></option>
+                <option value="1">1 (Strongly Disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 (Strongly Agree)</option>
+            </select>
 
-        <h3>
-            <strong>Question 8</strong>
-        </h3>
-        <h4>Sharks are misunderstood creatures.</h4>
-        <select data-placeholder="" class="chosen-select" id="q8">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
 
-        <h3>
-            <strong>Question 9</strong>
-        </h3>
-        <h4>You are ambitious.</h4>
-        <select data-placeholder="" class="chosen-select" id="q9">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
+            <h3>
+                <strong>Question 7</strong>
+            </h3>
+            <h4>The earth is flat.</h4>
+            <select data-placeholder="" class="chosen-select" id="Q7">
+                <option value=""></option>
+                <option value="1">1 (Strongly Disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 (Strongly Agree)</option>
+            </select>
 
-        <h3>
-            <strong>Question 10</strong>
-        </h3>
-        <h4>You dont like other peoples kids.</h4>
-        <select data-placeholder="" class="chosen-select" id="q10">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
+            <h3>
+                <strong>Question 8</strong>
+            </h3>
+            <h4>Sharks are misunderstood creatures.</h4>
+            <select data-placeholder="" class="chosen-select" id="Q8">
+                <option value=""></option>
+                <option value="1">1 (Strongly Disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 (Strongly Agree)</option>
+            </select>
 
-        <br>
-        <br>
+            <h3>
+                <strong>Question 9</strong>
+            </h3>
+            <h4>You are ambitious.</h4>
+            <select data-placeholder="" class="chosen-select" id="Q9">
+                <option value=""></option>
+                <option value="1">1 (Strongly Disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 (Strongly Agree)</option>
+            </select>
+
+            <h3>
+                <strong>Question 10</strong>
+            </h3>
+            <h4>You dont like other peoples kids.</h4>
+            <select data-placeholder="" class="chosen-select" id="Q10">
+                <option value=""></option>
+                <option value="1">1 (Strongly Disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5 (Strongly Agree)</option>
+            </select>
+
+            <br>
+            <br>
+        </div>
 
         <!-- Submit Button -->
         <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit">
@@ -208,7 +211,6 @@
                 </div>
                 <div class="modal-body">
                     <h2 id="matchName"></h2>
-                    <img id="matchImg" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -218,8 +220,12 @@
         </div>
     </div>
 
-    <script src="../data/logic.js"></script>
-
+    <script src="../data/logic.js" type="text/javascript"></script>
+    <!-- <script>
+         $("#submit").on("click", function () {
+        console.log("button clicked")
+         })
+    </script> -->
 </body>
 
 </html>
