--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <title>FriendFinder</title>
     <!-- Latest compiled and minified CSS & JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <meta charset="UTF-8">
-    <script src="https://code.jquery.com/jquery.js"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 </head>
@@ -23,7 +22,7 @@
             <br>
             <div>
                 <a href="/survey">
-                    <button type="button" class="btn btn-md btn-primary">
+                    <button id="submit" type="button" class="btn btn-md btn-primary">
                         <h4> Go to Survey</h4>
                     </button>
                 </a>
@@ -41,6 +40,8 @@
         </footer>
 
     </div>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="./js/logic.js" type="text/javascript"></script>
 
 </body>
 
