--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,33 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+    <!DOCTYPE html>
+    <html>
 
 <head>
     <meta charset="UTF-8">
     <title>FriendFinder</title>
 
     <!-- Latest compiled and minified CSS & JS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-        crossorigin="anonymous"></script>
 
     <!-- Font Awesome Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
-    <!-- Chosen -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
-
 </head>
 
 <body>
-   
+
     <div class="container">
 
-         <!-- questions field -->
+        <!-- questions field -->
         <div>
             <h2>Survey Questions</h2>
+            <h4><a href="/home">Back to Home</a></h4>
             <hr>
 
             <h3>
@@ -220,12 +214,83 @@
         </div>
     </div>
 
-    <script src="../data/logic.js" type="text/javascript"></script>
     <!-- <script>
-         $("#submit").on("click", function () {
-        console.log("button clicked")
-         })
+
+        window.onload = function () {
+            var config = {
+                '.chosen-select': {},
+                '.chosen-select-deselect': { allow_single_deselect: true },
+                '.chosen-select-no-single': { disable_search_threshold: 10 },
+                '.chosen-select-no-results': { no_results_text: 'Oops, nothing found!' },
+                '.chosen-select-width': { width: "95%" }
+            }
+
+            // for (var selector in config) {
+            //     $(selector).chosen(config[selector]);
+            // }
+            // Capture the form inputs 
+            $("#submit").on("click", function () {
+                console.log("button clicked")
+                // Form validation
+                function validateForm() {
+                    var isValid = true;
+                    $('.form-control').each(function () {
+                        if ($(this).val() === '')
+                            isValid = false;
+                    });
+                    $('.chosen-select').each(function () {
+                        if ($(this).val() === "")
+                            isValid = false
+                    })
+                    return isValid;
+                }
+                // If all required fields are filled
+                if (validateForm() == true) {
+                    // Create an object for the user's data
+                    var userData = {
+                        name: $("#name").val(),
+                        photo: $("#photo").val(),
+                        scores: [$("#Q1").val(), $("#Q2").val(), $("#Q3").val(), $("#Q4").val(), $("#Q5").val(), $("#Q6").val(), $("#Q7").val(), $("#Q8").val(), $("#Q9").val(), $("#Q10").val(),]
+                    }
+                    // Grab the URL of the website
+                    var currentURL = window.location.origin;
+                    console.log(currentURL)
+
+                    // AJAX post the data to the friends API. 
+                    $.post("/api/friends", userData,
+                        function (data) {
+                            // Grab the result from the AJAX post 
+                            // Most compatible friend name.
+                            $("#matchName").text(data.name);
+                            // Most compatible friend photo.
+                            $('#matchImg').attr("src", data.photo);
+                            // Show the modal with the best match.
+                            $("#resultsModal").modal('toggle');
+                            // Clear form 
+                            $("#name").val("");
+                            $("#photo").val("");
+                            $("#Q1").val("");
+                            $("#Q2").val("");
+                            $("#Q3").val("");
+                            $("#Q4").val("");
+                            $("#Q5").val("");
+                            $("#Q6").val("");
+                            $("#Q7").val("");
+                            $("#Q8").val("");
+                            $("#Q9").val("");
+                            $("#Q10").val("");
+                        });
+                }
+                else {
+                    alert("Please fill out all fields before submitting!");
+                }
+
+                return false;
+            });
+        }
     </script> -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="./js/logic.js" type="text/javascript"></script>
 </body>
 
 </html>
