--- a/app/public/home.html
+++ b/app/public/home.html
@@ -22,7 +22,7 @@
             <br>
             <div>
                 <a href="/survey">
-                    <button id="submit" type="button" class="btn btn-md btn-primary">
+                    <button type="button" class="btn btn-md btn-primary">
                         <h4> Go to Survey</h4>
                     </button>
                 </a>
