--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,16 +1,17 @@
-    <!DOCTYPE html>
-    <html>
+<!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="UTF-8">
     <title>FriendFinder</title>
 
-    <!-- Latest compiled and minified CSS & JS -->
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-        crossorigin="anonymous">
-
     <!-- Font Awesome Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.css">
+
+    <script type="text/JavaScript" src="http://code.jquery.com/jquery-1.11.2.js"></script>
+    <script type="text/JavaScript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.js"></script>
 
 </head>
 
@@ -21,7 +22,9 @@
         <!-- questions field -->
         <div>
             <h2>Survey Questions</h2>
-            <h4><a href="/home">Back to Home</a></h4>
+            <h4>
+                <a href="/home">Back to Home</a>
+            </h4>
             <hr>
 
             <h3>
@@ -177,14 +180,15 @@
         <!-- Submit Button -->
         <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit">
             <i class="fa fa-check-circle" aria-hidden="true"></i>
-            Submit</button>
+            Submit
+        </button>
 
         <hr>
         <footer class="footer">
             <div class="container">
                 <p>
                     <a href="/api/friends">API Friends List</a> |
-                    <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a>
+                    <a href="">GitHub Repo</a>
                 </p>
             </div>
         </footer>
@@ -214,7 +218,26 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- test modal -->
+    <a data-toggle="modal" href="#myModal" class="btn btn-primary">Launch modal</a>
+    <div class="modal fade" id="myModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <h4 class="modal-title">Modal title</h4>
+            </div>
+            <div class="modal-body">
+              Content for the dialog / modal goes here.
+            </div>
+            <div class="modal-footer">
+              <a href="#" data-dismiss="modal" class="btn">Close</a>
+              <a href="#" class="btn btn-primary">Save changes</a>
+            </div>
+          </div>
+        </div>
+    </div>
+
     <script src="./js/logic.js" type="text/javascript"></script>
 </body>
 
