--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -209,32 +209,13 @@
                 </div>
                 <div class="modal-body">
                     <h2 id="matchName"></h2>
+                    <div id="matchImg"></div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <a href="/"><button type="button" class="btn btn-default" data-dismiss="modal">Close</button></a>
                 </div>
             </div>
 
-        </div>
-    </div>
-
-    <!-- test modal -->
-    <a data-toggle="modal" href="#myModal" class="btn btn-primary">Launch modal</a>
-    <div class="modal fade" id="myModal">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-              <h4 class="modal-title">Modal title</h4>
-            </div>
-            <div class="modal-body">
-              Content for the dialog / modal goes here.
-            </div>
-            <div class="modal-footer">
-              <a href="#" data-dismiss="modal" class="btn">Close</a>
-              <a href="#" class="btn btn-primary">Save changes</a>
-            </div>
-          </div>
         </div>
     </div>
 
