ES6 and other big updates

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -209,7 +209,8 @@
                 </div>
                 <div class="modal-body">
                     <h2 id="matchName"></h2>
-                    <div id="matchImg"></div>
+                    <hr>
+                    <img src="" id="matchImg">
                 </div>
                 <div class="modal-footer">
                     <a href="/"><button type="button" class="btn btn-default" data-dismiss="modal">Close</button></a>
