--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.css">
 
+    <link rel="stylesheet" href="./styles.css">
+
     <script type="text/JavaScript" src="http://code.jquery.com/jquery-1.11.2.js"></script>
     <script type="text/JavaScript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.js"></script>
 
