--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -8,12 +8,12 @@
     <!-- Font Awesome Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.css">
 
     <link rel="stylesheet" href="./styles.css">
 
-    <script type="text/JavaScript" src="http://code.jquery.com/jquery-1.11.2.js"></script>
-    <script type="text/JavaScript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.js"></script>
+    <script type="text/JavaScript" src="https://code.jquery.com/jquery-1.11.2.js"></script>
+    <script type="text/JavaScript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.js"></script>
 
 </head>
 
